@@ -1,24 +1,21 @@
 package org.eihq.quiltshow.controller;
 
 import java.net.URISyntaxException;
-import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.security.auth.login.AccountNotFoundException;
 
 import org.eihq.quiltshow.configuration.UserRoles;
 import org.eihq.quiltshow.model.Person;
 import org.eihq.quiltshow.service.PersonService;
-import org.eihq.quiltshow.service.ShowService;
 import org.eihq.quiltshow.service.TokenService;
-import org.eihq.quiltshow.service.UserAuthentication;
 import org.springframework.beans.factory.InitializingBean;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.CrossOrigin;
@@ -38,6 +35,8 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 public class AuthController implements InitializingBean {
 
+	private static final String DEFAULT_ADMIN = "admin";
+	
 	@Value("${application.environment:dev}")
 	String environment;
 
@@ -64,10 +63,10 @@ public class AuthController implements InitializingBean {
 	public TokenResponse register(@RequestBody Person userData) throws URISyntaxException {
 		log.debug("Registering user {}", userData.getEmail());
 
-		List<GrantedAuthority> authorities = userData.getRoles().stream().map(r -> r.getAuthority()).toList();
+		List<GrantedAuthority> authorities = userData.getRoles().stream().map(r -> r.getAuthority()).collect(Collectors.toList());
 		
 		// add default password
-		userData.setPassword(userData.getPassword() == null ? "password" : userData.getPassword());	
+		userData.setPassword(userData.getPassword() == null ? "iowastar23" : userData.getPassword());	
 		String encodedPassword = passwordEncoder.encode(userData.getPassword());
 		userData.setPassword(encodedPassword);		
 		Person newUser = personService.save(userData);
@@ -84,7 +83,7 @@ public class AuthController implements InitializingBean {
 
 	@PostMapping("/token")
 	public TokenResponse token(Authentication auth) throws AccountNotFoundException {
-		log.debug("Token requested for user {}", auth.getName());
+		log.info("Token requested for user {}", auth.getName());
 
 		String token = tokenService.generateToken(auth);
 		log.debug("Token granted: {}", token);
@@ -107,32 +106,21 @@ public class AuthController implements InitializingBean {
 	
 	@Override
 	public void afterPropertiesSet() throws Exception {
-		if("local-only".equalsIgnoreCase(environment)) {
+		if(personService.getUser(DEFAULT_ADMIN) == null) {
 			createDefaultUsers();
 		}
 	}
 	
 	private void createDefaultUsers() {
 		Person admin = new Person();
-		admin.setEmail("admin");
-		admin.setPassword("admin");
+		admin.setEmail(DEFAULT_ADMIN);
+		admin.setPassword(DEFAULT_ADMIN);
 		admin.setFirstName("Show");
 		admin.setLastName("Admin");
 		admin.addRole(UserRoles.ROLE_ADMIN);
 		
-		Person user = new Person();
-		user.setEmail("user");
-		user.setFirstName("Show");
-		user.setLastName("User");
-		user.setAddress1("123 Fake St");
-		user.setCity("Dreams");
-		user.setState("IA");
-		user.setPhone("(123)456-7890");
-		user.setZip("52333");
-		
 		try {
 			register(admin);
-			register(user);
 		}
 		catch(URISyntaxException e) {
 			log.error("Error while creating admin user", e);
